--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        Eposzi oldal
+    </header>
+    <article>
+        Eposzi tartalom
+    </article>
+    <footer>
+        Eposzi lábaló (footer)
+    </footer>
 </body>
 </html>
