Tartalommal való feltöltés + formázások

--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teszt Oldal</title>
+    <title>طائر الشجرة</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <div>Eposzi oldal</div>
+        <div>موقع ملحمي</div>
         <div>حقخؤ ةتبنهش ثهي شيؤ قتص</div>
-        <div>Fakopáncs</div>
+        <div>طائر الشجرة</div>
     </header>
     <article>
-        Eposzi tartalom
+        <div>
+            <h1>منظمة شجرة الطيور</h1>
+            <p>المنظمة هي جمعية وهمية تعمل باللغة العربية، وقد تبدو عسكرية، ولكنها في الحقيقة مجرد نسج من خيالي. تم تطوير الموقع بأكمله مباشرةً ليبدو متهالكًا قدر الإمكان. كن بسيطًا ولكن يمكن التعرف عليه. فكرة الطائر هي فقط بسبب صورة قديمة أرسلتها إلى زولتان. ليس لدي المزيد من الأفكار لأكتبها، لذا فإن الباقي هو ما يأتي فقط.</p>
+            <p>لق الله الطير ليقطع الشجر وأمك. الحصان غير قابل للنفخ. كل ما هو غير موجود لا يمكن أن يكون في أي مكان آخر. الفلفل صغير الحجم لكن الفلفل أحمر.</p>
+        </div>
+        <img src="címer.png" id="logo">
     </article>
     <footer>
-        Eposzi lábaló (footer)
+        Kecskés Zsolt - 2023
     </footer>
 </body>
 </html>
