További tartalom + igazítások

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <p>لق الله الطير ليقطع الشجر وأمك. الحصان غير قابل للنفخ. كل ما هو غير موجود لا يمكن أن يكون في أي مكان آخر. الفلفل صغير الحجم لكن الفلفل أحمر.</p>
         </div>
         <img src="címer.png" id="logo">
+        <div>
+            <h1>نشيد وطني</h1>
+            <p>بارك الله في المجريينمرحبا بك سعيداالآن يمكنك رؤية البطاقة،دعونا نأكله.كل الينابيع التي تمزقت منذ زمن طويل،هنا تستطيع ان ترىإنه يستحق المزيد والمزيدكثير من الناس سعداء!لا تتردد في الاتصال بناثم ماذا حدثهذا قد لا يكون هذا هو الحالتعرف أكثر.يرجى مشاركة حبيتيسا، الدانوب،هذا ما تستطيع فعلهبشجاعة.</p>
+        </div>
     </article>
     <footer>
         Kecskés Zsolt - 2023
